Fix some bugs
    - Add a random color generator, if there is no color left in the
palette.
    - Add an overflow on legend if its too big for the container.

--- a/web-app/numeter_webapp/static/css/my.css
+++ b/web-app/numeter_webapp/static/css/my.css
@@ -97,6 +97,7 @@ div[id="body"] {
 
 .legend_container {
   width: 100px;  
+  height: 320px;  
   padding: 0px;
 }
 
